--- a/FUNAL_SEMANA7_TEORIA/FUNAL_SEMANA7_TEORIA.csproj
+++ b/FUNAL_SEMANA7_TEORIA/FUNAL_SEMANA7_TEORIA.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1356D1F7-0C25-4C73-B7D2-B3BD17654C7F}</ProjectGuid>
+    <ProjectGuid>{6B19202C-336C-4303-AB77-9E608986FBC6}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>FUNAL_SEMANA7</RootNamespace>
-    <AssemblyName>FUNAL_SEMANA7</AssemblyName>
+    <RootNamespace>FUNAL_SEMANA7_TEORIA</RootNamespace>
+    <AssemblyName>FUNAL_SEMANA7_TEORIA</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
